--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
+    "nest": "^0.1.6",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
